# docx2pdf

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
docx2pdf/: __init__.py  convert.jxa
examples/word2pdf/: LICENSE  README.md  gui.py  main.py
tests/: test_docx2pdf.py
