[tool.poetry]
name = "docx2pdf"
version = "0.1.0"
description = ""
authors = ["Al Johri <al.johri@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.5"
pywin32 = {version = "^227", platform = "win32"}
tqdm = "^4.41.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
docx2pdf = 'docx2pdf:cli'
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

