[tool.poetry]
name = "docx2pdf"
version = "0.1.5"
description = "Convert docx to pdf on Windows or macOS directly using Microsoft Word (must be installed)."
license = "MIT"
readme = "README.md"
homepage = "https://github.com/AlJohri/docx2pdf"
repository = "https://github.com/AlJohri/docx2pdf"
authors = ["Al Johri <al.johri@gmail.com>"]
classifiers = [
	"Operating System :: MacOS",
	"Environment :: MacOS X",
	"Environment :: Win32 (MS Windows)",
	"Operating System :: Microsoft :: Windows",
	"Topic :: Office/Business :: Office Suites",
	"Topic :: Software Development :: Libraries"
]

[tool.poetry.dependencies]
python = "^3.5"
pywin32 = {version = "^227", platform = "win32"}
tqdm = "^4.41.0"
importlib_metadata = {version = "^1.3.0", python = "< 3.8"}
appscript = {version = "^1.1.0", platform = "darwin"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
docx2pdf = 'docx2pdf:cli'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
